kubernetes/apps/network/envoy-gateway/config/envoy.sops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: network
sops:
  age:
    - recipient: age16zf0xkqzqarwgrnrj8eqv2eaylnsuph2npuqq90esxzh8zt3t3zs5z3y4j
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyaWZZVW5hN0FENXRtQXZ5
[...]
        cEqUhzb6gZptZYHnHpyJxlOT5/Yrk5xan0cJqCC+NcV/XNHUsiWT1w==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-22T04:13:18Z"
  mac: ENC[AES256_GCM,data:2jM+f3YnnDtgAxvxIIQkN2cNGEA8u0NZbnshthwD7jFL6fgEgghyapSWj735xxte9faHgMsorJD6+D3ora0PPhcgsLh20qudoG86KA+5WioppQHeXZk1dnKiBOtJ+5Uk2fT7RPcJiujn+Hzs5kEUipAT7TQIq3zo7JB9LghrFrE=,iv:0eFAdbCBQutrheaKU6afMiZMN2uP+Cvftyg8S/F04go=,tag:ZqbCyAhhekbIuxT9Lfe/Zg==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.2
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.veliz.cc
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: external.veliz.cc
      lbipam.cilium.io/ips: 10.0.20.5
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: veliz-cc-production-tls
sops:
  age:
    - recipient: age16zf0xkqzqarwgrnrj8eqv2eaylnsuph2npuqq90esxzh8zt3t3zs5z3y4j
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyaWZZVW5hN0FENXRtQXZ5
[...]
        cEqUhzb6gZptZYHnHpyJxlOT5/Yrk5xan0cJqCC+NcV/XNHUsiWT1w==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-22T04:13:18Z"
  mac: ENC[AES256_GCM,data:2jM+f3YnnDtgAxvxIIQkN2cNGEA8u0NZbnshthwD7jFL6fgEgghyapSWj735xxte9faHgMsorJD6+D3ora0PPhcgsLh20qudoG86KA+5WioppQHeXZk1dnKiBOtJ+5Uk2fT7RPcJiujn+Hzs5kEUipAT7TQIq3zo7JB9LghrFrE=,iv:0eFAdbCBQutrheaKU6afMiZMN2uP+Cvftyg8S/F04go=,tag:ZqbCyAhhekbIuxT9Lfe/Zg==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.2
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.veliz.cc
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: internal.veliz.cc
      lbipam.cilium.io/ips: 10.0.20.4
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: veliz-cc-production-tls
sops:
  age:
    - recipient: age16zf0xkqzqarwgrnrj8eqv2eaylnsuph2npuqq90esxzh8zt3t3zs5z3y4j
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyaWZZVW5hN0FENXRtQXZ5
[...]
        cEqUhzb6gZptZYHnHpyJxlOT5/Yrk5xan0cJqCC+NcV/XNHUsiWT1w==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-22T04:13:18Z"
  mac: ENC[AES256_GCM,data:2jM+f3YnnDtgAxvxIIQkN2cNGEA8u0NZbnshthwD7jFL6fgEgghyapSWj735xxte9faHgMsorJD6+D3ora0PPhcgsLh20qudoG86KA+5WioppQHeXZk1dnKiBOtJ+5Uk2fT7RPcJiujn+Hzs5kEUipAT7TQIq3zo7JB9LghrFrE=,iv:0eFAdbCBQutrheaKU6afMiZMN2uP+Cvftyg8S/F04go=,tag:ZqbCyAhhekbIuxT9Lfe/Zg==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.2
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
sops:
  age:
    - recipient: age16zf0xkqzqarwgrnrj8eqv2eaylnsuph2npuqq90esxzh8zt3t3zs5z3y4j
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyaWZZVW5hN0FENXRtQXZ5
[...]
        cEqUhzb6gZptZYHnHpyJxlOT5/Yrk5xan0cJqCC+NcV/XNHUsiWT1w==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-22T04:13:18Z"
  mac: ENC[AES256_GCM,data:2jM+f3YnnDtgAxvxIIQkN2cNGEA8u0NZbnshthwD7jFL6fgEgghyapSWj735xxte9faHgMsorJD6+D3ora0PPhcgsLh20qudoG86KA+5WioppQHeXZk1dnKiBOtJ+5Uk2fT7RPcJiujn+Hzs5kEUipAT7TQIq3zo7JB9LghrFrE=,iv:0eFAdbCBQutrheaKU6afMiZMN2uP+Cvftyg8S/F04go=,tag:ZqbCyAhhekbIuxT9Lfe/Zg==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.2
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: http
    - name: envoy-internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
sops:
  age:
    - recipient: age16zf0xkqzqarwgrnrj8eqv2eaylnsuph2npuqq90esxzh8zt3t3zs5z3y4j
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyaWZZVW5hN0FENXRtQXZ5
[...]
        cEqUhzb6gZptZYHnHpyJxlOT5/Yrk5xan0cJqCC+NcV/XNHUsiWT1w==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-22T04:13:18Z"
  mac: ENC[AES256_GCM,data:2jM+f3YnnDtgAxvxIIQkN2cNGEA8u0NZbnshthwD7jFL6fgEgghyapSWj735xxte9faHgMsorJD6+D3ora0PPhcgsLh20qudoG86KA+5WioppQHeXZk1dnKiBOtJ+5Uk2fT7RPcJiujn+Hzs5kEUipAT7TQIq3zo7JB9LghrFrE=,iv:0eFAdbCBQutrheaKU6afMiZMN2uP+Cvftyg8S/F04go=,tag:ZqbCyAhhekbIuxT9Lfe/Zg==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.2
